# pixel_battle

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
config/: config.yaml
pixel_battle/: exceptions.py
pixel_battle/api/: __init__.py  account.py  canvas.py  canvas_data.py  login.py  ping.py  routes.py
pixel_battle/api/schemas/account/: patch_request.json  post_request.json  response.json
pixel_battle/api/schemas/canvas/: request.json  response.json
pixel_battle/api/schemas/canvas_data/: get_response.json  post_request.json
pixel_battle/api/schemas/canvas_management/: patch_request.json
pixel_battle/api/schemas/login/: post_response.json
pixel_battle/api/schemas/ping/: response.json
pixel_battle/api/schemas/user_canvases/: get_response.json
pixel_battle/api/tests/: conftest.py  test_canvas_data.py  test_login.py
pixel_battle/cli/: __init__.py  db.py  server.py
pixel_battle/config/: __init__.py  app.py
pixel_battle/db/: __init__.py  tables.py
pixel_battle/db/alembic/: alembic.ini  env.py  script.py.mako  utils.py
pixel_battle/db/alembic/versions/: 2023-03-26_add_account_id_to_canvas.py  2023-03-26_initial_db.py
pixel_battle/db/models/: __init__.py  account.py  canvas.py  canvas_log.py  token.py
pixel_battle/helpers/: __init__.py  api.py  db_manager.py
pixel_battle/logic/: account_service.py  canvas_service.py
