[metadata]
name = pixel-battle
version = 0.0.1
author = maria
author_email = masha.mironchuk.01@gmail.com
description = Backend for pixel battle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com
project_urls =
    Bug Tracker = https://example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    alembic>=1.8.0,<1.9.0
    sqlalchemy>=1.4.0,<1.5.0
    sqlalchemy_utils>=0.38.0,<0.39.0
    pyyaml>=6.0.0,<7.0.0
    psycopg2>=2.9.0,<2.10.0
    pydantic>=1.9.0,<1.10.0
    falcon>=3.1.0,<3.2.0
    gunicorn>=20.1.0,<20.2.0
    waitress>=2.1.0,<2.2.0
    werkzeug>=2.1.0,<2.2.0
    fastjsonschema>=2.15.0,<2.16.0
    click>=8.0,<9.0
    argon2-cffi==21.3.0
python_requires = >=3.9

[options.extras_require]
dev =
    mypy <1.0.0
    types-setuptools
    types-PyYAML
    types-requests
    black >=22.3.0,<22.4.0
    pytest

[options.packages.find]
include = *
exclude = *test*

[options.entry_points]
console_scripts =
    battlecli = pixel_battle.cli:cli_root
